@@ -1,29 +1,86 @@
 
-function EPJS_toggle( element_id, start_visible, display )
+function EPJS_toggleSlide( element_id, start_visible )
 {
-	element = document.getElementById( element_id );
+	element = $(element_id);
+	current_vis = start_visible;
 
-	current_vis = false;
-	if( start_visible )
+	if( element.style.display == "none" )
 	{
-		current_vis = (element.style.display != "none" );
+		current_vis = false;
+	}
+	if( element.style.display == "block" )
+	{
+		current_vis = true;
+	}
+
+
+	element.style.overflow = 'hidden';
+	if( current_vis )
+	{
+		inner = $(element_id+"_inner");
+  		new Effect.Scale(element_id,
+			0,
+    			{ 
+				scaleX: false,
+				scaleContent: false,
+				scaleFrom: 100,
+				duration: 0.3,
+				transition: Effect.Transitions.linear,
+				afterFinish: function () { $(element_id).style.display = "none"; },
+				scaleMode: { originalHeight: inner.offsetHeight, originalWidth: inner.offsetWidth }
+			} ); 
 	}
 	else
 	{
-		current_vis = (element.style.display == display );
+        	element.style.height = "0px";
+		element.style.display = "block";
+		inner = $(element_id+"_inner");
+/*
+    		var x = element.x ? element.x : element.offsetLeft,
+        		y = element.y ? element.y : element.offsetTop;
+		window.scrollTo( x, y + inner.offsetHeight+50 );
+*/
+  		new Effect.Scale(element_id,
+			100,
+    			{ 
+				scaleX: false,
+				scaleContent: false,
+				scaleFrom: 0,
+				duration: 0.3,
+				transition: Effect.Transitions.linear,
+				scaleMode: { originalHeight: inner.offsetHeight, originalWidth: inner.offsetWidth },
+				afterFinish: function () { 
+					$(element_id).style.overflow = "visible"; 
+					$(element_id).style.height = ""; 
+				}
+			} ); 
 	}
+}
 
+function EPJS_toggle( element_id, start_visible )
+{
+	element = $(element_id);
+
+	current_vis = start_visible;
+
+	if( element.style.display == "none" )
+	{
+		current_vis = false;
+	}
+	if( element.style.display == "block" )
+	{
+		current_vis = true;
+	}
+	
 	if( current_vis )
 	{
 		element.style.display = "none";
 	}
 	else
 	{
-		element.style.display = display;
+		element.style.display = "block";
 	}
 }
-
-
 
 
 function ep_gt( a, b ) { return a>b; }
