@@ -126,39 +126,53 @@ sub parse_config
 			}
 		}
 	}
-	else
-	{
-		# no <help> configured. Do something sensible.
-		
-		$self->{config}->{help} = $self->{session}->make_doc_fragment;
-		foreach my $field ( @{$self->{config}->{fields}} )
-		{
-			my $chunk = $self->{session}->make_element( "div", class=>"ep_sr_help_chunk" );
-			my $strong = $self->{session}->make_element( "strong" );
-			$strong->appendChild( $field->render_name( $self->{session} ) );
-			$strong->appendChild( $self->{session}->make_text( ": " ) );
-			$chunk->appendChild( $strong );
-			$chunk->appendChild( 
-				$field->render_help( 
-					$self->{session}, 
-					$field->get_type() ) );
-			$self->{config}->{help}->appendChild( $chunk );
-		}
-	}
 
+#	else
+#	{
+#		# no <help> configured. Do something sensible.
+#		
+#		$self->{config}->{help} = $self->{session}->make_doc_fragment;
+#		foreach my $field ( @{$self->{config}->{fields}} )
+#		{
+#			my $chunk = $self->{session}->make_element( "div", class=>"ep_sr_help_chunk" );
+#			my $strong = $self->{session}->make_element( "strong" );
+#			$strong->appendChild( $field->render_name( $self->{session} ) );
+#			$strong->appendChild( $self->{session}->make_text( ": " ) );
+#			$chunk->appendChild( $strong );
+#			$chunk->appendChild( 
+#				$field->render_help( 
+#					$self->{session}, 
+#					$field->get_type() ) );
+#			$self->{config}->{help}->appendChild( $chunk );
+#		}
+#	}
+
+}
+
+sub has_help
+{
+	my( $self ) = @_;
+
+	return defined $self->{config}->{help};
 }
 
 sub render_content
 {
 	my( $self, $surround ) = @_;
 
-	my $table = $self->{session}->make_element( "table" );
-	my $tbody = $self->{session}->make_element( "tbody", class => "sidetable" );
+	my $table = $self->{session}->make_element( "table", class => "ep_multi" );
+	my $tbody = $self->{session}->make_element( "tbody" );
 	$table->appendChild( $tbody );
 	my ($th, $tr, $td);
+	my $first = 1;
 	foreach my $field ( @{$self->{config}->{fields}} )
 	{
-		$tr = $self->{session}->make_element( "tr" );
+		my $class = "";
+		$class = "ep_first" if $first;
+		$first = 0;
+
+		$tr = $self->{session}->make_element( "tr", class=>$class );
+		$table->appendChild( $tr );
 		
 		# Get the field and its value/default
 		my $value;
@@ -173,7 +187,7 @@ sub render_content
 		}
 		
 		# Append field
-		$th = $self->{session}->make_element( "th" );
+		$th = $self->{session}->make_element( "th", class=>"ep_multi_heading" );
 
 		my $label = $field->render_name( $self->{session} );
 
@@ -183,10 +197,20 @@ sub render_content
 				"sys:ep_form_required",
 				label=>$label );
 		}
-		
+	
 		$th->appendChild( $label );
+		$th->appendChild( $self->{session}->make_text( ":" ) );
  
-		$td = $self->{session}->make_element( "td" );
+		my $help_prefix = $self->{prefix}."_help_".$field->get_name;
+		$td = $self->{session}->make_element( "td", class=>"ep_multi_input" );
+		my $inline_help = $self->{session}->make_element( "div", id=>$help_prefix, class=>"ep_no_js ep_multi_inline_help" );
+		my $inline_help_inner = $self->{session}->make_element( "div", id=>$help_prefix."_inner" );
+		$inline_help->appendChild( $inline_help_inner );
+		$inline_help_inner->appendChild(
+			$field->render_help( 
+					$self->{session}, 
+					$field->get_type() ) );
+		$td->appendChild( $inline_help );
 		$td->appendChild( $field->render_input_field( 
 			$self->{session}, 
 			$value, 
@@ -200,7 +224,22 @@ sub render_content
 		  ) );
 		$tr->appendChild( $th );
 		$tr->appendChild( $td );
-		$tbody->appendChild( $tr );
+
+		# help toggle
+
+		my $td2 = $self->{session}->make_element( "td", class=>"ep_multi_help ep_only_js ep_toggle" );
+
+		my $show_help = $self->{session}->make_element( "div", class=>"ep_sr_show_help ep_only_js", id=>$help_prefix."_show" );
+		my $helplink = $self->{session}->make_element( "a", onClick => "EPJS_toggleSlide('$help_prefix',false,'block');EPJS_toggle('${help_prefix}_hide',false,'block');EPJS_toggle('${help_prefix}_show',true,'block');return false", href=>"#" );
+		$show_help->appendChild( $self->html_phrase( "show_help",link=>$helplink ) );
+		$td2->appendChild( $show_help );
+	
+		my $hide_help = $self->{session}->make_element( "div", class=>"ep_sr_hide_help ep_hide", id=>$help_prefix."_hide" );
+		my $helplink2 = $self->{session}->make_element( "a", onClick => "EPJS_toggleSlide('$help_prefix',false,'block');EPJS_toggle('${help_prefix}_hide',false,'block');EPJS_toggle('${help_prefix}_show',true,'block');return false", href=>"#" );
+		$hide_help->appendChild( $self->html_phrase( "hide_help",link=>$helplink2 ) );
+		$td2->appendChild( $hide_help );
+
+		$tr->appendChild( $td2 );
 	}
 	return $table;
 }
